# WaterPaths

./: .gitignore  CMakeLists.txt  README.md  borg_caesb.sh  borg_caesb.sh~  borg_caesb_valgrind.sh  borg_caesb_valgrind.sh~  caesb_opt_test.sh  caesb_politica.sh  optimizeTestProb.sh  reference_final_filtered_paper3.reference  ressimulacao_354p.csv  ressimulacao_64p_criterios_desempenho.csv  sample_solutions.csv  solutions_not_crashed.csv  table_gen.sh  table_gen_prof.sh  test_problem_single_run.sh
TestFiles/: caesbDescobertoDemandClassesFractions.csv  caesbDescobertoUserClassesWaterPrices.csv  caesbPriceRestrictionMultipliers.csv  caesbTortoSMDemandClassesFractions.csv  caesbTortoSMUserClassesWaterPrices.csv  caesbUserClassesWaterPrices.csv  convert_to_hm.py  demand_to_wastewater_fraction_caesb_descoberto.csv  demand_to_wastewater_fraction_caesb_tortoSM.csv  policies_rdm.csv  utilities_rdm.csv  water_sources_rdm.csv
WaterPaths_Pathways/: Pathways_s199_ajustado.csv  Pathways_s21_ajustado.csv  Pathways_s240_ajustado.csv  Pathways_s249_ajustado.csv  Pathways_s288_ajustado.csv  Pathways_s34_ajustado.csv  Pathways_s35_ajustado.csv  Pathways_s44_ajustado.csv  pathways_plot.py
src/: main.cpp
src/ContinuityModels/: ContinuityModelROF.cpp  ContinuityModelROF.h
src/ContinuityModels/Base/: ContinuityModel.cpp
src/DataCollector/: AllocatedReservoirDataCollector.cpp  MasterDataCollector.cpp  MasterDataCollector.h  TransfersBilateralDataCollector.cpp
src/DroughtMitigationInstruments/: Restrictions.cpp  Transfers.cpp  TransfersBilateral.cpp  TransfersBilateral.h
src/DroughtMitigationInstruments/Base/: DroughtMitigationPolicy.cpp  DroughtMitigationPolicy.h
src/Problem/: Caesb.cpp  Caesb.h  PaperTestProblem.cpp
src/Problem/Base/: Problem.cpp  Problem.h
src/Simulation/: Simulation.cpp  Simulation.h
src/SystemComponents/: WaterTratmentPlant.cpp  WaterTratmentPlant.h
src/SystemComponents/Utility/: InfrastructureManager.cpp  InfrastructureManager.h  Utility.cpp  Utility.h
src/SystemComponents/WaterSources/: AllocatedReservoir.cpp  Intake.cpp
src/SystemComponents/WaterSources/Base/: WaterSource.cpp  WaterSource.h
src/Utils/: Constants.h  ObjectivesCalculator.cpp  Utils.cpp
